<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundColor"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="48dp"
            tools:context=".ui.screens.auth.login.LoginFragment">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/hello_again"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.HeadlineLarge"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="4dp"
                android:alpha="0.9"
                android:fontFamily="@font/poppins_light"
                android:text="@string/welcome_back_you_ve_been_missed"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.TitleLarge"
                android:textColor="@color/colorSecondaryText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="64dp"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:placeholderText="Enter email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.TitleMedium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:placeholderText="Enter password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.TitleMedium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingVertical="16dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.TitleMedium"
                app:cornerRadius="8dp"
                app:elevation="8dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/don_t_have_an_account_yet"
                    android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

                <TextView
                    android:id="@+id/go_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/register"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                    android:textColor="?attr/colorPrimary" />


            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/progress_bar" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
